<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My City</string>
    <string name="menu_shout">Shout!!!</string>
    <string name="menu_buddyList">Contacts</string>
    <string name="menu_chat">Chats</string>
    <string name="menu_closechat">Close Conversation</string>
    <string name="menu_forceupdate">Force Update</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="button_lock_at_my_location">Lock on My Location</string>
    <string name="button_unlock">Unlock</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_buddy_list">Contacts</string>
    <string name="text_chating_with">Chating With: </string>
    <string name="hint_type_to_compose">Type to compose</string>
    <string name="button_send">Send</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_user_cont">Add a user content</string>
    <string name="title_activity_load_user_cont">LoadUserContActivity</string>
    <string name="action_settings">Settings</string>

</resources>
